syntax = "proto3";
package greeter;

// Service for greeting functionality
service GreeterService {
    // Says hello to the provided name and returns a greeting message
    rpc SayHello (HelloRequest) returns (HelloResponse);
    
}

message HelloRequest {
    string firstName = 1 [default = ""];
    string lastName = 2 [default = ""];
}

message HelloResponse {
    string message = 1;
}